--- a/src/jsp/css/ecocean.css
+++ b/src/jsp/css/ecocean.css
@@ -17,6 +17,17 @@ h1 {
 	border-top: 1px solid #09F;
 }
 
+h1.unapproved_encounters {
+	font-size: 1.2em;
+	line-height: 1.2em;
+	margin-top: 0px;
+	padding-top: 0px;
+	border-top: 1px solid #09F;
+	border-bottom: 1px solid #09F;
+	background-color:#CC6600;
+}
+
+
 p.caption,.caption {
 	margin-top: 0px;
 	padding-top: 0px;
