--- a/src/main/webapp/css/ecocean.css
+++ b/src/main/webapp/css/ecocean.css
@@ -999,6 +999,12 @@ tr.paging {
   width: 135px;
 }
 
+.form_label2 {
+  font-weight: bold;
+  text-align: left;
+  vertical-align: top;
+ }
+
 td.you, td.photo {
   width: 50%;
   vertical-align: top;
