--- a/src/main/webapp/css/ecocean.css
+++ b/src/main/webapp/css/ecocean.css
@@ -1086,6 +1086,20 @@ table.metalTags td
   text-align: center;
   padding: 5px;
 }
+table.editEncounter {
+ width: 150px;
+ border: 1;
+ padding: 1px;
+ border-spacing: 0;
+ border-collapse: collapse;  /* For IE 7 */
+ border-color: #000000;
+ background-color: #CCCCCC;
+}
+ 
+table.editEncounter .formLabel {
+ text-align: left;
+ font: bold;
+} 
 /* ================================================================
 This copyright notice must be untouched at all times.
 
