Added extra batch upload plugin information on JSP page.

--- a/src/main/webapp/css/batchUpload.css
+++ b/src/main/webapp/css/batchUpload.css
@@ -57,6 +57,9 @@ span.dpFormat {
 span.dataType {
   font-weight: bold;
 }
+span.fileName {
+  font-style: italic;
+}
 span.enum {
 }
 span.buttonDesc {
