setting link popup CSS

--- a/src/main/webapp/css/ecocean.css
+++ b/src/main/webapp/css/ecocean.css
@@ -68,6 +68,11 @@ a:focus,a.ecocean:focus {
   border: none;
 }
 
+a.launchPopup {
+  color:blue;
+  cursor: pointer;
+}
+
 /* Layout */
 #wrapper {
   margin: 0px;
