--- a/src/main/webapp/css/encounterVM.css
+++ b/src/main/webapp/css/encounterVM.css
@@ -3,15 +3,22 @@
 	min-width: 500px;
 	min-height: 400px;
 	position: relative;
-	border: solid 1px #888;
+	border: solid 3px #333;
 }
 
+#vm-wrapper .title {
+	margin: 0 0 10px 0;
+	padding: 2px;
+	background-color: #CCC;
+	text-align: center;
+	font-size: 1.2em;
+}
 
 #vm-target-wrapper {
 	position: absolute;
 	left: 0;
 	top: 0;
-	width: 49%;
+	width: 50%;
 	height: 100%;
 }
 
@@ -19,9 +26,9 @@
 	position: absolute;
 	right: 0;
 	top: 0;
-	width: 49%;
+	width: 50%;
 	height: 100%;
-	padding-left: 4px;
+	padding-left: 0px;
 	border-left: 3px solid #333;
 }
 
@@ -36,7 +43,8 @@
 }
 
 #vm-target-main img {
-	height: 100%;
+	max-height: 100%;
+	max-width: 100%;
 }
 
 #vm-target-small img {
@@ -56,7 +64,7 @@
 	color: #FFF;
 	padding: 2px;
 	text-align: center;
-	width: 100%;
+	width: 99%;
 	bottom: 0;
 }
 
@@ -65,20 +73,34 @@
 	position: relative;
 }
 
+#small-note {
+	position: absolute;
+	bottom: 0;
+	background-color: rgba(255,255,255,0.5);
+	color: #000;
+	width: 99%;
+	padding: 1px 3px 1px 3px;
+	font-size: 0.8em;
+	text-align: center;
+}
 
 
 #vm-candidates-controls {
 	position: absolute;
 	background-color: #EEF;
-	width: 98%;
 	bottom: 0;
+	padding: 4px;
 	height: 15%;
 }
 
 
 #vm-candidates-imgs {
-	height: 100%;
-	overflow-y: scroll;
+	height: 75%;
+	overflow-y: auto;
+}
+
+#vm-candidates-imgs p {
+	padding: 10px;
 }
 
 #vm-candidates-imgs .candidate {
@@ -153,7 +175,7 @@
 
 
 #candidate-full-zoom {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 98%;
