--- a/src/main/webapp/css/ecocean.css
+++ b/src/main/webapp/css/ecocean.css
@@ -1358,3 +1358,64 @@ table.tissueSample td {
     -moz-border-radius: ;
 }
 
+.vm-button, .vm-button:hover {
+	/*
+	background: url(../images/compare-images-icon.png) no-repeat;
+	width: 69px;
+	height: 60px;
+*/
+	color: #000;
+	text-decoration: none;
+	border: solid 1px black;
+	border-radius: 2px;
+	padding: 1px 3px 1px 3px;
+	position: absolute;
+	margin: 0;
+	display: inline-block;
+}
+.vm-button {
+	opacity: 0.8;
+	background-color: #AAA;
+}
+.vm-button:hover {
+	opacity: 1.0;
+	background-color: #DD0;
+}
+
+.vm-img-wrapper {
+	position: relative;
+}
+.vm-img-wrapper .vm-button {
+	bottom: -4px;
+	right: -4px;
+}
+
+
+.enc-cr-wrapper {
+	padding: 5px;
+	position: relative;
+	text-align: right;
+}
+
+.enc-cr-wrapper img {
+	max-height: 80px;
+	margin-top: 12px;
+	max-width: 100px;
+}
+
+.enc-cr-wrapper .note {
+	font-size: 0.8em;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	background-color: rgba(200,200,200, 0.75);
+	padding: 2px;
+}
+
+
+.enc-cr-wrapper .cr-button {
+	font-size: 0.8em;
+	margin-top: 10px;
+}
+
+
