lost a } in css during merge

--- a/src/main/webapp/css/ecocean.css
+++ b/src/main/webapp/css/ecocean.css
@@ -1479,6 +1479,7 @@ tr.no-access:hover td {
 	min-height: 200px;
 	border: solid 2px #888;
 	z-index: 300;
+}
 
 /* generic "notice me!" error text? */
 .error {
