--- a/src/main/webapp/css/ecocean.css
+++ b/src/main/webapp/css/ecocean.css
@@ -1476,3 +1476,19 @@ table.tissueSample td {
 }
 
 
+.img-watermark {
+	background-color: rgba(255,255,255,0.3);
+	position: absolute;
+	top: 75px;
+	left: -25px;
+	font-size: 0.85em;
+	width: 110%;
+	text-align: center;
+	padding: 13px;
+	transform: rotate(-21deg);
+	color: rgba(0,0,0,0.9);
+}
+
+
+
+
