--- a/src/main/webapp/css/mma.css
+++ b/src/main/webapp/css/mma.css
@@ -96,6 +96,9 @@ body {
 }
 #mma-resultDetailsTable td {
 }
+#mma-resultDetailsTable a {
+  text-decoration: none;
+}
 #mma-footer {
   margin: 1em 0;
   font-style: italic;
